<resources>
    <string name="app_name">Welcome to your company!</string>

    <!-- main activity -->
    <string name="new_company">Create new company</string>
    <string name="load_company">Load previous company</string>

    <!-- company setup activity -->
    <string name="setup_title">Fill your CEO details</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="university">University</string>
    <string name="coutry">Country</string>
    <string name="gender">Gender</string>
    <string name="email">Email address</string>
    <string name="hiring_condition">Hires only:</string>
    <string name="button_add">Hire CEO</string>
    <string name="button_generate">Generate random details</string>
    <string name="capacity">Subordinates capacity</string>
    <string name="condition_detail">Insert condition</string>

    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="predicate_array">
        <item>Empty</item>
        <item>University</item>
        <item>Country</item>
        <item>Gender</item>
        <item>Email domain</item>
    </string-array>

    <!-- company main activity-->
    <string name="hire_button">Hire</string>
    <string name="fire_button">Fire</string>
    <string name="assign_button">Assign</string>
    <string name="report_button">Report</string>
    <string name="show_team_button">Show CEO team</string>
    <string name="hide_team_button">Hide team</string>
    <string name="go_back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <!-- hire manager -->
    <string name="hire_manager_title">Fill your manager details</string>

    <!-- employee list -->
    <string name="show_details">Show manager options</string>

    <!-- manager activity -->
    <string name="show_manager_team">Show manager team</string>

    <!-- hire developer -->
    <string name="hire_dev_title">Fill your developer details</string>
    <string name="role">Role</string>

    <string-array name="dev_role_array">
        <item>Developer</item>
        <item>Tester</item>
        <item>Contributor</item>
        <item>Team leader</item>
    </string-array>

    <!-- ceo assign task -->
    <string name="task_title">Fill your task details</string>
    <string name="task_name">Task description</string>
    <string name="units">Units of work</string>
    <string name="done">Done</string>

    <!-- report -->
    <string name="report_title">Company report</string>
    <string name="empty_report">Nothing to display :(</string>
</resources>
