<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linear_hoizontal"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <Spinner
            android:id="@+id/editGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <EditText
            android:id="@+id/editUniversity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginTop="15dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/university" />

        <TextView
            android:id="@+id/hiringCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/hiring_condition" />

        <Spinner
            android:id="@+id/editHiringCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/conditionDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/condition_detail" />

            <EditText
                android:id="@+id/editConditionDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/conditionDetail"
                android:inputType="textCapWords"
                android:layout_centerHorizontal="true"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/editConditionDetailSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/conditionDetail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginTop="15dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coutry" />

        <EditText
            android:id="@+id/editCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="number"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capacity"/>


    </LinearLayout>
</LinearLayout>