<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFF0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/hire_manager_title"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/edit_ole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp" />

        <TextView
            android:id="@+id/role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role" />

        <include
            layout="@layout/employee_form"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/title" />

    </LinearLayout>

    <Button
        android:id="@+id/generate_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/cancel"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="19dp"
        android:background="@android:color/darker_gray"
        android:text="@string/button_generate" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/border"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/cancel"/>

    <Button
        android:id="@+id/hire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/hire_button" />


</RelativeLayout>