<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFF0">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/choose_employee"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/title"/>

    <TextView
        android:id="@+id/task_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_employee"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/task_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edit_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_form_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="14sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_task_name"
        android:layout_centerHorizontal="true"
        android:text="@string/task_name"
        android:visibility="invisible" />


    <EditText
        android:id="@+id/edit_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:textSize="14sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_units"
        android:layout_centerHorizontal="true"
        android:text="@string/units"
        android:visibility="invisible" />

    <Button
        android:id="@+id/assign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/units"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/assign_button"
        android:visibility="invisible" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/border"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/cancel"/>

    <Button
        android:id="@+id/generate_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/units"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        android:text="@string/button_generate"
        android:visibility="invisible" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/border"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/done" />


</RelativeLayout>