<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFF0">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/setup_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

   <include layout="@layout/manager_form"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:layout_below="@id/title"></include>

    <Button
        android:id="@+id/generate_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        android:text="@string/button_generate" />

    <Button
        android:id="@+id/add_ceo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/generate_random"
        android:layout_alignBottom="@+id/generate_random"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@+id/title"
        android:background="@drawable/border"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/button_add" />


</RelativeLayout>